@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/oto/oto-0.4.ebuild,v 1.9 2006/09/03 06:43:03 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/oto/oto-0.4.ebuild,v 1.10 2008/01/23 18:26:54 armin76 Exp $
 
 DESCRIPTION="Open Type Organizer"
 HOMEPAGE="http://sourceforge.net/projects/oto/"
@@ -8,7 +8,7 @@ SRC_URI="mirror://sourceforge/oto/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 arm ia64 ~ppc s390 sh sparc ~x86"
+KEYWORDS="~alpha ~amd64 arm ia64 ~ppc s390 sh sparc x86"
 IUSE=""
 
 DEPEND="virtual/libc"
