@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/oto
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/oto/ChangeLog,v 1.7 2006/07/11 21:10:24 agriffis Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/oto/ChangeLog,v 1.8 2008/01/23 18:26:54 armin76 Exp $
+
+  23 Jan 2008; Raúl Porcel <armin76@gentoo.org> oto-0.4.ebuild:
+  Add ~alpha, x86 stable
 
   11 Jul 2006; Aron Griffis <agriffis@gentoo.org> oto-0.4.ebuild:
   Mark 0.4 stable on ia64
